--- a/index.html
+++ b/index.html
@@ -36,5 +36,9 @@
           </li>
         </ul>
       </nav>
+      <section id="welcome-section" class="welcome-section">
+        <h1>Hey I am Michael Shawn muga</h1>
+        <p>a web developer</p>
+      </section>
 </body>
 </html>
