--- a/index.html
+++ b/index.html
@@ -36,9 +36,45 @@
           </li>
         </ul>
       </nav>
+
       <section id="welcome-section" class="welcome-section">
         <h1>Hey I am Michael Shawn muga</h1>
         <p>a web developer</p>
       </section>
+
+      <section id="projects" class="projects-section">
+          <h2 class="projects-section-header">These are some of my projects</h2>
+
+          <div class="project-grid">
+
+          </div>
+      </section>
+      <section id="contact" class="contact-section">
+          <div class="contact-section-header">
+              <h2>Let's work together...</h2>
+              <p>How do you take your coffee?</p>
+          </div>
+          <div class="contact-links">
+              <a href="https://www.facebook.com/michael.muga.98" target="_blank" class="btn contact-details">
+                  <i class="fab fa-facebook-square"></i>Facebook
+              </a>
+              <a id="profile-link" href="https://github.com/michael-muga" target="_blank" class="btn contact-details">
+                <i class="fab fa-github"></i>GitHub
+              </a>
+              <a href="https://twitter.com/michaelshwatz" target="_blank" class="btn contact-details">
+                <i class="fab fa-twitter"></i>Twitter
+              </a>
+              <a href="" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+              <a href="tell:+254718151269" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+
+          </div>
+      </section>
+
+      <footer>
+          <p>
+              &copy; Created by Michael muga
+          </p>
+      </footer>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 </body>
 </html>
