--- a/index.html
+++ b/index.html
@@ -46,7 +46,38 @@
           <h2 class="projects-section-header">These are some of my projects</h2>
 
           <div class="project-grid">
-
+            <a href="https://michael-muga.github.io/Letuce_Eat/" target="_blank" class="project project-tile">
+                <img class="project-image" width="400px" src="./image/LetusEat.png" alt="project"/>
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Leatus Eat User Interface
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="https://michael-muga.github.io/The-Burger-Palace/" target="_blank" class="project project-tile">
+                <img class="ptoject-image" width="400px" src="./image/BurgerPalace.png" alt="project"/>
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    BurgerPalace
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="https://michael-muga.github.io/Poppin_Pizza/" target="_blank" class="project project-tile">
+                <img class="project-image" width="400px" src="./image/ArtGallery.png"alt="project"/>
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    ArtGallery
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="https://michael-muga.github.io/UnityNursing_convinience/" target="_blank" class="project project-tile">
+                <img class="project-image" width="400px" src="./image/UNC.png" alt="project"/>
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    UnityNursing_convinience
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
           </div>
       </section>
       <section id="contact" class="contact-section">
